# ogre

./: .gitignore  CMakeLists.txt  LICENSE  shell.nix
.github/workflows/: cmake3.yml
apps/: CMakeLists.txt
apps/ogre/apps/task/: CMakeLists.txt
apps/ogre/libs/: CMakeLists.txt
apps/ogre/libs/libcli/: CMakeLists.txt
apps/ogre/libs/libcli/include/cli/: Application.hpp  Command.hpp
apps/ogre/utils/dependencies/: CMakeLists.txt
apps/ogre/utils/scripts/: build.sh
apps/task/: CMakeLists.txt  main.cpp
libs/libcli/: CMakeLists.txt
libs/libcli/src/cli/: Command.cpp
libs/libcli/test/cli/: Command.cpp
libs/libuuid/: CMakeLists.txt
libs/libuuid/include/uuid/: uuid.hpp
libs/libuuid/src/uuid/: uuid.cpp
libs/tasklib/test/: CMakeLists.txt
src/: CMakeLists.txt
src/example/: main.cpp
src/tasklib/cli/: Application.hpp  Command.cpp  Command.hpp  Option.cpp  Option.hpp  Parameters.hpp
src/tasklib/util/: uuid.cpp  uuid.hpp
test/fuzz_test/: CMakeLists.txt  main.cpp
test/unit_test/: CMakeLists.txt
test/unit_test/tasklib/cli/: Application_help.cpp  Command.cpp
tests/: CMakeLists.txt
tests/unit_test/: CMakeLists.txt  main.cpp
util/cmake/: CompilerSettings.cmake  Linters.cmake  compiler_settings.cmake
utils/cmake/: Linters.cmake  compiler_settings.cmake
utils/nix/: shell.nix
